<resources>
    <string name="app_name">SecureMessage</string>
    <string name="title_home">Message Box</string>
    <string name="title_dashboard">Send Message</string>
    <string name="title_notifications">Connect Bluetooth</string>
    <string name="title_activity_maps">Map</string>
    <string name="button">Envoyer</string>
    <string name="button1">Rechercher</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_message">Enter message</string>
    <string name="logo">logo</string>
    <string name="bluetooth_name">bluetooth_name</string>
    <string name="btanalys">Analyser</string>
    <string name="switch2">Découverte</string>
    <string name="switch1">Bluetooth</string>
    <string name="bluetooth_address">bluetooth_address</string>
    <string name="paired_name">paired_name</string>
    <string name="paired_address">paired_address</string>
    <string name="deconnection">Déconnection</string>
    <string name="deverouiller">Déverouiller</string>
</resources>
